Combination of dialog + wm.open_mainfile causes crash #49199

Closed
opened 2016-08-30 09:26:56 +02:00 by Lawrence D'Oliveiro · 8 comments

The enclosed addon script pops up a trivial dialog, and when the “OK” button is clicked, it executes bpy.ops.wm.open_mainfile("EXEC_DEFAULT", filepath = bpy.data.filepath) to reopen the .blend file. For some reason, this causes a crash. If the dialog is taken out, there is no crash, and the .blend file is successfully reopened.

Steps to reproduce:

  1. Install this addon.
  2. Enable it.
  3. Load any Blender document. (This and previous step may be done in either order.)
  4. Select the item this addon appends to the “File” menu.
  5. Click the “OK” button in the dialog which pops up.
  6. Crash.
The enclosed addon script pops up a trivial dialog, and when the “OK” button is clicked, it executes `bpy.ops.wm.open_mainfile("EXEC_DEFAULT", filepath = bpy.data.filepath)` to reopen the `.blend` file. For some reason, this causes a crash. If the dialog is taken out, there is no crash, and the `.blend` file is successfully reopened. Steps to reproduce: 1. Install this addon. 2. Enable it. 3. Load any Blender document. (This and previous step may be done in either order.) 4. Select the item this addon appends to the “File” menu. 5. Click the “OK” button in the dialog which pops up. 6. Crash.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @ldo

Added subscriber: @ldo

Forgot the addon: open_mainfile_crash.py

Forgot the addon: [open_mainfile_crash.py](https://archive.blender.org/developer/F347734/open_mainfile_crash.py)

Added subscribers: @JulianEisel, @Sergey

Added subscribers: @JulianEisel, @Sergey

@JulianEisel, caused by 4559229. Any chance you have a look before RC1?

@JulianEisel, caused by 4559229. Any chance you have a look before RC1?

This issue was referenced by e240025276

This issue was referenced by e240025276648218c19d3fb7dbd5af92253b7718
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Yes, it works now, thank you.

Yes, it works now, thank you.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49199
No description provided.